codex-rs/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__queued_user_messages__tests__render_one_message.snap
---
source: tui2/src/bottom_pane/queued_user_messages.rs
assertion_line: 102
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 2 },
    content: [
        "  ↳ Hello, world!                       ",
        "    ⌥ + ↑ edit                          ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 17, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 9, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 14, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
